# docs/swagger.json
@@ -25,7 +25,7 @@
             "get": {
                 "description": "Get the status of server.",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -49,7 +49,7 @@
             "get": {
                 "description": "Get all todos",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -62,8 +62,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/schema.ToDo"
+                            }
                         }
                     }
                 }
@@ -71,7 +73,7 @@
             "post": {
                 "description": "Create a todo. Provide title \u0026 description",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -95,7 +97,7 @@
             "get": {
                 "description": "Get todo by id",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -104,12 +106,20 @@
                     "crud todos"
                 ],
                 "summary": "Get todo by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Todo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/schema.ToDo"
                         }
                     }
                 }
@@ -117,7 +127,7 @@
             "delete": {
                 "description": "Provide an id to delete a todo",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -126,6 +136,15 @@
                     "crud todos"
                 ],
                 "summary": "Delete a todo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Todo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -139,7 +158,7 @@
             "patch": {
                 "description": "Update a todo. Provide title, description \u0026 id",
                 "consumes": [
-                    "*/*"
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -148,6 +167,54 @@
                     "crud todos"
                 ],
                 "summary": "Update a todo",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Todo ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ToDo"
+                        }
+                    }
+                }
+            }
+        },
+        "/verify/:status/:role": {
+            "get": {
+                "description": "Middleware chaining",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "verification"
+                ],
+                "summary": "Middlewares Chaining demonstration",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "authenticated / not authenticated",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "admin / user / guest",
+                        "name": "role",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -158,28 +225,28 @@
                     }
                 }
             }
-        },
-        "/verify/:status/:role": {
-            "get": {
-                "description": "Middleware chaining",
-                "consumes": [
-                    "*/*"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "verification"
-                ],
-                "summary": "Middlewares Chaining demonstration",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
+        }
+    },
+    "definitions": {
+        "schema.ToDo": {
+            "type": "object",
+            "required": [
+                "description",
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 256,
+                    "minLength": 3
+                },
+                "done": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 3
                 }
             }
         }
